--- a/src/app/layout/question/question-edit/question-edit.component.html
+++ b/src/app/layout/question/question-edit/question-edit.component.html
@@ -5,11 +5,11 @@
     </button>
 </div>
 <div class="modal-body">
-    <input class="w-100 p-1 m-1" name="question" type="text" [(ngModel)]="question.question" placeholder="New Question"/>
-    <input class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer" placeholder="New Answer"/>
+    <input class="w-100 p-1 m-1" name="question" value= "xd" type="text" [(ngModel)]="question.question"/>
+    <input class="w-100 p-1 m-1" name="answer" type="text" [(ngModel)]="question.answer"/>
     <select mdbInput (click)="getAttributeValues()" class="form-control w-100" [(ngModel)]="attributeOption">
         <option value="" hidden>Select</option>
-        <option [value]="attribute.type" *ngFor="let attribute of attributes">{{attribute.type}}</option>
+        <option [value]="attribute.type" *ngFor="let attribute of attributes">{{attribute.category}}</option>
     </select>
     <select mdbInput *ngIf="attributeOption != '' " class="form-control w-100" [(ngModel)]="attributeValueOption">
         <option value="" hidden>Select</option>
